# SpecForge

./: .gitignore  .mcp.json  Cargo.toml  IMPROVEMENTS-TRACKER.md  README.md  SURFACE-WIRING-TRACKER.md  plan.md  specforge-graph.dot  specforge.json
crates/specforge-cli/: Cargo.toml
crates/specforge-cli/src/: add.rs  check.rs  collect.rs  doctor.rs  explain.rs  export.rs  extension_authoring.rs  extensions.rs  format.rs  formatter.rs  infer_status.rs  init.rs  login.rs  main.rs  mcp.rs  migrate.rs  model.rs  outline.rs  pipeline.rs  providers.rs  publish.rs  query.rs  remove.rs  search.rs  stats.rs  trace.rs  update.rs
crates/specforge-cli/tests/: cli.rs  collect.rs  contracts.rs  e2e_cross_extension.rs  e2e_edges.rs  e2e_fixtures.rs  e2e_mcp.rs  e2e_multi_entity.rs  e2e_query.rs  e2e_schema.rs  e2e_trace.rs  e2e_verify.rs  export.rs  extension_authoring.rs  extensions.rs  format.rs  init.rs  integration_test.rs  main.rs  migrate.rs  pipeline.rs  product_commands.rs  query.rs  registry.rs  stats.rs  trace.rs
crates/specforge-codegen/: Cargo.toml
crates/specforge-codegen/src/: checksum.rs  generator.rs  json_schema.rs  lib.rs  naming.rs  rust.rs  rust_test_stubs.rs  slugify.rs  subprocess.rs  test_stubs.rs  typescript.rs
crates/specforge-common/: Cargo.toml
crates/specforge-common/src/: config.rs  custom_entity.rs  diagnostic.rs  edge_type.rs  entity_id.rs  entity_kind.rs  field.rs  field_registry.rs  format_version.rs  intern.rs  interned_id.rs  interner.rs  json_config.rs  kind_registry.rs  lib.rs  module.rs  plugin_manifest.rs  prefix.rs  project.rs  span.rs  suggest.rs
crates/specforge-coverage/: Cargo.toml
crates/specforge-coverage/src/: coverage.rs  entity_map.rs  format.rs  junit.rs  lib.rs  libtest.rs  matrix.rs  merge.rs  report.rs  validate.rs
crates/specforge-emitter/: Cargo.toml
crates/specforge-emitter/benches/: emit.rs
crates/specforge-emitter/src/: brief.rs  budget.rs  compile.rs  context.rs  diagnostic_fmt.rs  dot.rs  emit.rs  error.rs  exit_code.rs  json.rs  lib.rs  markdown.rs  plan.rs  query.rs  scanner_dispatch.rs  schema.rs  scope.rs  stats.rs  trace.rs  types.rs
crates/specforge-emitter/tests/: builtins.rs  contracts.rs  determinism.rs  diagnostics.rs  dual_mode.rs  e2e_pipeline.rs  emit_brief.rs  emit_context.rs  emit_dot.rs  emit_graph.rs  emit_json.rs  emitter_error.rs  extension_json_sync.rs  main.rs  model.rs  outline.rs  plan.rs  query.rs  scanner_dispatch.rs  schema.rs  scope.rs  stats.rs  stress.rs  token_budget.rs  trace.rs
crates/specforge-extism/: Cargo.toml
crates/specforge-extism/src/: builtins.rs  composite.rs  host_context.rs  lib.rs  runtime.rs
crates/specforge-extism/tests/: builtins.rs  composite.rs  host_functions.rs  integration.rs  main.rs  runtime.rs
crates/specforge-formatter/: Cargo.toml
crates/specforge-formatter/src/: comments.rs  config.rs  diff.rs  discover.rs  engine.rs  lib.rs  rules.rs
crates/specforge-graph/: Cargo.toml  build.rs
crates/specforge-graph/benches/: graph.rs
crates/specforge-graph/src/: build.rs  builder.rs  file_index.rs  graph.rs  lib.rs  spec_graph.rs  subgraph.rs
crates/specforge-graph/tests/: contracts.rs  graph.rs  main.rs  stress.rs
crates/specforge-lsp/: Cargo.toml
crates/specforge-lsp/src/: backend.rs  capabilities.rs  code_actions.rs  completion.rs  diagnostics.rs  document.rs  document_symbol.rs  document_sync.rs  formatting.rs  goto_definition.rs  grammar_cache.rs  hover.rs  lib.rs  main.rs  navigation.rs  position.rs  references.rs  rename.rs  semantic_tokens.rs  state.rs  symbols.rs  util.rs  workspace_symbol.rs
crates/specforge-lsp/tests/: code_actions.rs  completion.rs  concurrency.rs  contracts.rs  diagnostics.rs  document.rs  e2e.rs  grammar_loading.rs  hover.rs  integration.rs  lifecycle.rs  main.rs  navigation.rs  rename.rs  semantic_tokens.rs  state.rs  symbols.rs
crates/specforge-mcp/: Cargo.toml
crates/specforge-mcp/src/: compile.rs  lib.rs  lifecycle.rs  notifications.rs  registry.rs  state.rs  subscriptions.rs  types.rs
crates/specforge-mcp/tests/: contracts.rs  events.rs  invariants.rs  lifecycle.rs  main.rs  notifications.rs  operations_mgmt.rs  operations_mutation.rs  prompts.rs  protocol.rs  resources.rs  subscriptions.rs  surface_wiring.rs  tools_core.rs  tools_inference.rs  tools_navigation.rs
crates/specforge-migrate/: Cargo.toml
crates/specforge-migrate/src/: lib.rs
crates/specforge-parser/: Cargo.toml
crates/specforge-parser/benches/: parse.rs
crates/specforge-parser/fuzz/: Cargo.toml
crates/specforge-parser/src/: ast.rs  cst_to_ast.rs  dedent.rs  lib.rs  parse.rs
crates/specforge-parser/tests/: contracts.rs  main.rs  parse_test.rs  parsing.rs  snapshot_tests.rs
crates/specforge-registry/: Cargo.toml
crates/specforge-registry-server/: Cargo.toml
crates/specforge-registry-server/src/: auth.rs  db.rs  handlers.rs  main.rs  state.rs  storage.rs
crates/specforge-registry/src/: invariants.rs  lib.rs
crates/specforge-registry/tests/: credentials.rs  http_client.rs  keyword_index.rs  main.rs  product_manifest.rs  provider.rs  registry_client.rs  registry_config.rs  registry_ops.rs  resolver.rs  software_manifest.rs  surface.rs  zero_entity_registries.rs  zero_entity_validation.rs
crates/specforge-resolver/: Cargo.toml
crates/specforge-resolver/src/: file_graph.rs  lib.rs  linker.rs  resolve.rs  symbol_table.rs
crates/specforge-resolver/tests/: contracts.rs  main.rs  resolution.rs
crates/specforge-validator/: Cargo.toml
crates/specforge-validator/src/: file_ref.rs  lib.rs  orphan.rs  passes.rs  render.rs  summary.rs
crates/specforge-validator/tests/: validation.rs
crates/specforge-wasm/: Cargo.toml
crates/specforge-wasm/src/: builtin.rs  cache.rs  contributions.rs  discover.rs  discovery.rs  engine_pool.rs  error.rs  host_functions.rs  install.rs  integrity.rs  invariants.rs  lib.rs  lifecycle.rs  loader.rs  lock.rs  lock_file.rs  manifest.rs  manifest_bridge.rs  orchestrate.rs  peer_deps.rs  query.rs  (+10 more)
crates/specforge-watch/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: extract_extension_json.rs
(+1004 files in other folders)
