[workspace]
resolver = "3"
members = [
    "crates/specforge-common",
    "crates/tree-sitter-specforge",
    "crates/specforge-parser",
    "crates/specforge-resolver",
    "crates/specforge-graph",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/specforge/specforge"

[workspace.dependencies]
# Internal
specforge-common = { path = "crates/specforge-common" }
specforge-parser = { path = "crates/specforge-parser" }
tree-sitter-specforge = { path = "crates/tree-sitter-specforge" }

# External
tree-sitter = "0.26.6"
tree-sitter-language = "0.1.7"
petgraph = "0.8.3"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
walkdir = "2.5.0"

# Build
cc = "1.2.56"

# Dev/test
insta = { version = "1.46.3", features = ["json"] }
tempfile = "3.26.0"
specforge-test = { path = "integrations/rust/specforge-test" }
specforge-test-macros = { path = "integrations/rust/specforge-test-macros" }

[profile.release]
lto = true
strip = true
