[workspace]
resolver = "3"
members = [
    "crates/specforge-common",
    "crates/tree-sitter-specforge",
    "crates/specforge-parser",
    "crates/specforge-resolver",
    "crates/specforge-graph",
    "crates/specforge-validator",
    "crates/specforge-emitter",
    "crates/specforge-watch",
    "crates/specforge-formatter",
    "crates/specforge-registry",
    "crates/specforge-wasm",
    "crates/specforge-lsp",
    "crates/specforge-mcp",
    "crates/specforge-migrate",
    "crates/specforge-cli",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/specforge/specforge"

[workspace.dependencies]
# Internal
specforge-common = { path = "crates/specforge-common" }
specforge-formatter = { path = "crates/specforge-formatter" }
specforge-parser = { path = "crates/specforge-parser" }
specforge-registry = { path = "crates/specforge-registry" }
specforge-mcp = { path = "crates/specforge-mcp" }
specforge-migrate = { path = "crates/specforge-migrate" }
specforge-wasm = { path = "crates/specforge-wasm" }
tree-sitter-specforge = { path = "crates/tree-sitter-specforge" }

# External
tree-sitter = "0.26.6"
tree-sitter-language = "0.1.7"
petgraph = "0.8.3"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ariadne = "0.6.0"
sha2 = "0.10.9"
semver = "1.0.28"
strsim = "0.11.1"
walkdir = "2.5.0"
toml = "0.8.22"
glob = "0.3.2"

# Build
cc = "1.2.56"

# Watch
notify = "8.2.0"

# LSP
tower-lsp = "0.20.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "io-std", "io-util", "time"] }

# CLI
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.50"

# Benchmarks
criterion = { version = "0.5.1", features = ["html_reports"] }

# Dev/test
assert_cmd = "2.1.2"
predicates = "3.1.3"
insta = { version = "1.46.3", features = ["json"] }
tempfile = "3.26.0"
specforge-test = { path = "integrations/rust/specforge-test" }
specforge-test-macros = { path = "integrations/rust/specforge-test-macros" }

[profile.test]
opt-level = 1
debug = "line-tables-only"

[profile.release]
lto = true
strip = true
