[package]
name = "xtask"
edition = "2024"
version = "0.1.0"
publish = false

[[bin]]
name = "extract-extension-json"
path = "src/extract_extension_json.rs"

[dependencies]
specforge-emitter = { path = "../crates/specforge-emitter" }
specforge-wasm = { path = "../crates/specforge-wasm" }
serde_json = "1.0"
