[package]
name = "specforge-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "specforge"
path = "src/main.rs"

[dependencies]
specforge-common = { workspace = true }
specforge-parser = { workspace = true }
specforge-resolver = { workspace = true }
specforge-graph = { workspace = true }
specforge-validator = { workspace = true }
specforge-emitter = { workspace = true }
specforge-codegen = { workspace = true }
specforge-coverage = { workspace = true }
specforge-wasm = { workspace = true }
clap = { workspace = true }
ariadne = { workspace = true }
walkdir = { workspace = true }
inquire = { workspace = true }
notify = { workspace = true }
ctrlc = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
