[package]
name = "specforge-codegen"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
specforge-common = { workspace = true }
specforge-parser = { workspace = true }
specforge-graph = { workspace = true }
specforge-emitter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
which = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
