[package]
name = "specforge-common"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
lasso = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strsim = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
