[package]
name = "specforge-coverage"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
specforge-common = { workspace = true }
specforge-graph = { workspace = true }
specforge-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
