[package]
name = "specforge-emitter"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
specforge-graph = { path = "../specforge-graph" }
specforge-common = { path = "../specforge-common" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
specforge-parser = { path = "../specforge-parser" }
specforge-test.workspace = true
specforge-test-macros.workspace = true
