[package]
name = "specforge-extism"
edition.workspace = true
version.workspace = true
license.workspace = true
autotests = false

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
specforge-wasm = { workspace = true }
specforge-common = { workspace = true }
extism = "1.21.0"
serde_json = { workspace = true }

[dev-dependencies]
specforge-registry = { workspace = true }
tempfile = { workspace = true }
