[package]
name = "specforge-formatter"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-specforge = { workspace = true }
tree-sitter-language = { workspace = true }
specforge-common = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
specforge-test = { workspace = true }
specforge-test-macros = { workspace = true }
specforge-parser = { workspace = true }
serde_json = { workspace = true }
