[package]
name = "specforge-graph"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
specforge-common = { workspace = true }
specforge-parser = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
specforge-resolver = { workspace = true }
