[package]
name = "specforge-graph"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
specforge-common = { workspace = true }
specforge-parser = { workspace = true }
petgraph = { workspace = true }
strsim = { workspace = true }

[dev-dependencies]
specforge-resolver = { path = "../specforge-resolver" }
tempfile = { workspace = true }
