[package]
name = "specforge-lsp"
edition.workspace = true
version.workspace = true
license.workspace = true
autotests = false

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
specforge-common = { workspace = true }
specforge-emitter = { path = "../specforge-emitter" }
specforge-formatter = { workspace = true }
specforge-graph = { path = "../specforge-graph" }
specforge-parser = { workspace = true }
specforge-registry = { path = "../specforge-registry" }
specforge-validator = { path = "../specforge-validator" }
specforge-wasm = { path = "../specforge-wasm" }
specforge-watch = { path = "../specforge-watch" }
tree-sitter = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
specforge-test = { workspace = true }
specforge-test-macros = { workspace = true }
tempfile = { workspace = true }
