[package]
name = "specforge-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true
autotests = false

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
specforge-common = { workspace = true }
specforge-graph = { path = "../specforge-graph" }
specforge-emitter = { path = "../specforge-emitter" }
specforge-registry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }

[dev-dependencies]
specforge-parser = { workspace = true }
specforge-test = { workspace = true }
specforge-test-macros = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
