[package]
name = "specforge-parser"
edition.workspace = true
version.workspace = true
license.workspace = true
autotests = false

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
specforge-common = { workspace = true }
serde = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }
tree-sitter-specforge = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
specforge-test = { workspace = true }
specforge-test-macros = { workspace = true }

[[bench]]
name = "parse"
harness = false
