[package]
name = "specforge-registry-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "specforge-registry"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rusqlite = { version = "0.35.0", features = ["bundled"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.1"
hex = "0.4.3"

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
