[package]
name = "specforge-resolver"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
specforge-common = { workspace = true }
specforge-parser = { workspace = true }
petgraph = { workspace = true }
strsim = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
