[package]
name = "specforge-resolver"
edition.workspace = true
version.workspace = true
license.workspace = true
autotests = false

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
specforge-common = { workspace = true }
specforge-parser = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
specforge-test = { workspace = true }
specforge-test-macros = { workspace = true }
