[package]
name = "specforge-validator"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
ariadne = { workspace = true }
specforge-common = { workspace = true }
specforge-graph = { path = "../specforge-graph" }
specforge-parser = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
specforge-test = { workspace = true }
specforge-test-macros = { workspace = true }
