[package]
name = "specforge-wasm"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
specforge-common = { workspace = true }
specforge-emitter = { workspace = true }
specforge-graph = { workspace = true }
extism = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
semver = { workspace = true }
petgraph = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
