[package]
name = "specforge-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[[test]]
name = "tests"
path = "tests/main.rs"

[dependencies]
specforge-common = { workspace = true }
specforge-registry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
