[package]
name = "specforge-test"
version = "0.1.0"
edition = "2021"
description = "Test traceability for SpecForge — link Rust tests to spec entities"
license = "MIT OR Apache-2.0"

[dependencies]
specforge-test-macros = { path = "../specforge-test-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
